--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,29 @@ input {
     font-size: 18px;
     padding: 8px;
 }
+/*for input box*/
+.input-box {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.input-box input {
+    margin-right: 10px;
+    padding:5px ;
+    font-size: 18px;
+}
+
+.input-box button {
+    border:none;
+    background-color: #000000;
+    padding: 5px 10px;
+    font-size: 18px;
+    color: #fff;
+    align-items: center;
+    cursor: pointer;
+}
 /* added image to be lower half of page*/
 .lower-image {
     margin-top: auto;
